--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
          <th scope="row">Alina</th>
          <td>ali@gmail.com </td>
          <td>CSS guru</td>
-         <td>Spaghetti</td>
+         <td>Spaghetti och köttbullar</td>
        </tr>
 
 
